--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="container1">
             <h1>COMP2245 Project 1</h1>
             <nav>
                 <ul>
